// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cafeteria_opening Component Snapshots cafeteria-opening Snapshot all closed 1`] = `
<div
  className="grid grid-flow-row sm:gap-1 lg:gap-2 xl:gap-3 4xl:gap-4 8xl:gap-5"
>
  <div
    className="grid grid-flow-row sm:gap-1 lg:gap-2 xl:gap-3 4xl:gap-4 8xl:gap-5 items-center box-border h-fit font-light leading-normal
                    sm:text-xs md:text-sm lg:text-baselg xl:text-xl 2xl:text-1.5xl 4xl:text-3xl 8xl:text-4.5xl sm:text-left"
  >
    <div
      className="flex sm:gap-1 lg:gap-2 4xl:gap-3 box-border items-center"
    >
      <div>
        Dining Hall: 
      </div>
      <div
        className="font-light bg-transparent w-auto h-auto inline-block text-white sm:px-1 xl:px-2 2xl:px-3"
        style={
          Object {
            "backgroundColor": "Tomato",
            "borderRadius": "500px",
          }
        }
      >
        closed
      </div>
      until
      <div>
        11:00
      </div>
    </div>
    <div
      className="flex sm:gap-1 lg:gap-2 4xl:gap-3 box-border items-center"
    >
      <div>
        Cafeteria: 
      </div>
      <div
        className="font-light bg-transparent w-auto h-auto inline-block text-white sm:px-1 xl:px-2 2xl:px-3"
        style={
          Object {
            "backgroundColor": "Tomato",
            "borderRadius": "500px",
          }
        }
      >
        closed
      </div>
      until
      <div>
        07:30
      </div>
    </div>
    <div
      className="flex sm:gap-1 lg:gap-2 4xl:gap-3 box-border items-center"
    >
      <div>
        [koeri]Werk: 
      </div>
      <div
        className="font-light bg-transparent w-auto h-auto inline-block text-white sm:px-1 xl:px-2 2xl:px-3"
        style={
          Object {
            "backgroundColor": "Tomato",
            "borderRadius": "500px",
          }
        }
      >
        closed
      </div>
      until
      <div>
        11:00
      </div>
    </div>
    <div
      className="flex sm:gap-1 lg:gap-2 4xl:gap-3 box-border items-center"
    >
      <div>
        [pizza]Werk: 
      </div>
      <div
        className="font-light bg-transparent w-auto h-auto inline-block text-white sm:px-1 xl:px-2 2xl:px-3"
        style={
          Object {
            "backgroundColor": "Tomato",
            "borderRadius": "500px",
          }
        }
      >
        closed
      </div>
      until
      <div>
        11:00
      </div>
    </div>
  </div>
  <div
    className="font-light leading-normal sm:text-xs md:text-sm lg:text-baselg xl:text-xl 2xl:text-1.5xl 4xl:text-3xl 8xl:text-4.5xl sm:text-left"
  >
    <div>
      Reopens: 
       March 4
    </div>
  </div>
</div>
`;

exports[`cafeteria_opening Component Snapshots cafeteria-opening Snapshot all open 1`] = `
<div
  className="grid grid-flow-row sm:gap-1 lg:gap-2 xl:gap-3 4xl:gap-4 8xl:gap-5"
>
  <div
    className="grid grid-flow-row sm:gap-1 lg:gap-2 xl:gap-3 4xl:gap-4 8xl:gap-5 items-center box-border h-fit font-light leading-normal
                    sm:text-xs md:text-sm lg:text-baselg xl:text-xl 2xl:text-1.5xl 4xl:text-3xl 8xl:text-4.5xl sm:text-left"
  >
    <div
      className="flex sm:gap-1 lg:gap-2 4xl:gap-3 box-border items-center"
    >
      <div>
        Dining Hall: 
      </div>
      <div
        className="font-light bg-transparent w-auto h-auto inline-block text-white sm:px-1 xl:px-2 2xl:px-3"
        style={
          Object {
            "backgroundColor": "ForestGreen",
            "borderRadius": "500px",
          }
        }
      >
        open
      </div>
      until
      <div>
        14:00
      </div>
    </div>
    <div
      className="flex sm:gap-1 lg:gap-2 4xl:gap-3 box-border items-center"
    >
      <div>
        Cafeteria: 
      </div>
      <div
        className="font-light bg-transparent w-auto h-auto inline-block text-white sm:px-1 xl:px-2 2xl:px-3"
        style={
          Object {
            "backgroundColor": "ForestGreen",
            "borderRadius": "500px",
          }
        }
      >
        open
      </div>
      until
      <div>
        17:00
      </div>
    </div>
    <div
      className="flex sm:gap-1 lg:gap-2 4xl:gap-3 box-border items-center"
    >
      <div>
        [koeri]Werk: 
      </div>
      <div
        className="font-light bg-transparent w-auto h-auto inline-block text-white sm:px-1 xl:px-2 2xl:px-3"
        style={
          Object {
            "backgroundColor": "ForestGreen",
            "borderRadius": "500px",
          }
        }
      >
        open
      </div>
      until
      <div>
        14:00
      </div>
    </div>
    <div
      className="flex sm:gap-1 lg:gap-2 4xl:gap-3 box-border items-center"
    >
      <div>
        [pizza]Werk: 
      </div>
      <div
        className="font-light bg-transparent w-auto h-auto inline-block text-white sm:px-1 xl:px-2 2xl:px-3"
        style={
          Object {
            "backgroundColor": "ForestGreen",
            "borderRadius": "500px",
          }
        }
      >
        open
      </div>
      until
      <div>
        15:00
      </div>
    </div>
  </div>
  <div
    className="font-light leading-normal sm:text-xs md:text-sm lg:text-baselg xl:text-xl 2xl:text-1.5xl 4xl:text-3xl 8xl:text-4.5xl sm:text-left"
  >
    <div />
  </div>
</div>
`;
